--- a/2018/day13/carts.ipynb
+++ b/2018/day13/carts.ipynb
@@ -622,6 +622,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Array{Any,1}:\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       " 7\n",
+       " 8"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = [4,5,6,7,8,9,9]\n",
+    "s = []\n",
+    "for (i,x) in enumerate(v)\n",
+    "\n",
+    "    if x == 9\n",
+    "        j = findnext(x->x==9,v,i+1)\n",
+    "        deleteat!(v,j)\n",
+    "    else\n",
+    "        push!(s,x)\n",
+    "    end\n",
+    "end\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
