--- a/2018/day15/scrap.ipynb
+++ b/2018/day15/scrap.ipynb
@@ -176,12 +176,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length(values(Dict()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length(values(Dict(1 => [])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0-element Array{Any,1}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "union(values(Dict(1 => []))...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "AbstractDict collections only contain Pairs;\nEither look for e.g. A=>B instead, or use the `keys` or `values`\nfunction if you are looking for a key or value respectively.",
+     "output_type": "error",
+     "traceback": [
+      "AbstractDict collections only contain Pairs;\nEither look for e.g. A=>B instead, or use the `keys` or `values`\nfunction if you are looking for a key or value respectively.",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at /Applications/JuliaPro-1.0.1.1.app/Contents/Resources/julia/Contents/Resources/julia/lib/julia/sys.dylib:?",
+      " [2] in(::Tuple{Int64,Int64}, ::Dict{Int64,Int64}) at ./abstractdict.jl:28",
+      " [3] top-level scope at In[14]:1"
+     ]
+    }
+   ],
+   "source": [
+    "(1,9) in Dict(1=>9)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "delete!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
